--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>My Webpage</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952500004875297"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>My Webpage</h1>
