--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
     <div class="footnote">
         <p>This webpage was created by <a href="https://github.com/danielhardej">Daniel Hardej</a> with a lot of assitance from <a href="https://github.com/features/copilot/">GitHub Copilot</a>.</p>
     </div>
+
     <div class="ad-left">
         <img src="https://via.placeholder.com/150x600?text=Left+Ad">
     </div>
 
     <div class="ad-right">
         <img src="https://via.placeholder.com/150x600?text=Right+Ad">
+    </div>
+
+    <div class="ad-bottom">
+        <img src="https://via.placeholder.com/728x90?text=Bottom+Ad">
     </div>
 </body>
 </html>
