--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
     <h1>My Webpage</h1>
     <h2>Welcome to my webpage about ducks</h2>
     <h3>Ducks are very cute. Here's 100 of them. Please enjoy!</h3>
-    <div class="container">
-        <script>
-
-            var user_input = prompt("Are ducks cool?");
+<!-- 
+    <script>
+        var user_input = prompt("Are ducks cool?");
             if (user_input.toLowerCase() === "yes") {
                 setTimeout(function() {
                     alert("Correct! Enjoy looking at the ducks!");
@@ -24,6 +23,10 @@
                     alert("Wrong answer. Now look at these ducks.");
                 }, 100);
             }
+    </script> -->
+
+    <div class="container">
+        <script>
 
             for (var i = 0; i < 100; i++) {
                 document.write('<div class="box"><img src="https://hips.hearstapps.com/hmg-prod/images/how-to-keep-ducks-call-ducks-1615457181.jpg?crop=0.669xw:1.00xh;0.166xw,0&resize=1200:*"></div>');
@@ -36,19 +39,21 @@
         <p>This webpage was created by <a href="https://github.com/danielhardej">Daniel Hardej</a> with a lot of assitance from <a href="https://github.com/features/copilot/">GitHub Copilot</a>.</p>
     </div>
 
+    <div class="ad-bottom">
+        <img src="https://via.placeholder.com/900x300?text=Bottom+Ad">
+    </div>
+
     <div class="ad-left">
-        <img src="https://via.placeholder.com/150x600?text=Left+Ad">
+        <img src="https://via.placeholder.com/200x1000?text=Left+Ad">
     </div>
 
     <div class="ad-right">
-        <img src="https://via.placeholder.com/150x600?text=Right+Ad">
+        <img src="https://via.placeholder.com/200x1000?text=Right+Ad">
     </div>
 
-    <!--
-    <div class="ad-bottom">
-        <img src="https://via.placeholder.com/728x120?text=Bottom+Ad">
-    </div>
-    -->
     
+    
+   
+
 </body>
 </html>
